--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,2 +1,45 @@
-<div class="mt-20">
-</div>
+---
+import { Image } from 'astro:assets'
+import Stats from './AuthorStats.astro'
+import author from '../images/oleksii-vratskyi.jpg'
+---
+
+<section class="grid">
+
+
+  <div class="grid mt-[100px] not-prose p-3 lg:p-0">
+    <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-between place-items-center">
+      <div>
+
+        <div class="grid gap-y-5 lg:gap-y-0">
+          <h1 class="text-8xl font-black"><span class="bg-clip-text text-transparent bg-gradient-to-r from-primary via-accent to-secondary glow-gradient-text">Oleksii Vratskyi</span></h1>
+          <h2 class="text-6xl font-base">
+          Front-end розробник<br />
+          UI/UX Дизайнер
+        </h2>
+      </div>
+      <div class="mt-10 grid gap-y-5">
+          <p class="prose lg:prose-lg break-words text-balance">
+            Мене звуть Олексій Врацький, я фрілансер з України. 
+            Я займаюся розробкою сайтів у різних галузях 
+            уже кілька років. За цей час я працював з інтернет-магазинами, 
+            цільовими сторінками, блогами і багатьом іншим. 
+          </p>
+          <p class="prose lg:prose-lg break-words text-balance">
+            Я буду радий співпрацювати з вами у створенні чудового продукту, 
+            який допоможе вам залучити більше клієнтів і поліпшити присутність 
+            вашої компанії в Інтернеті.
+          </p>
+        </div>
+      </div>
+
+      <div class="place-self-center rounded-full order-first lg:order-last">
+        <Image src={author} alt="morph" format='avif' class="ring-2 ring-secondary rounded-full size-[300px] shadow-xl shadow-secondary/20">
+      </div>
+
+    </div>
+  </div>
+
+  <Stats />
+
+</section>
