--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -1,114 +1,36 @@
 ---
-import { Image } from "astro:assets";
-import logo from '/src/images/logo.png'
 import SwitchLang from './SwitchLang.astro'
-import { getLangFromUrl } from '../../i18n/utils';
-import Nav from "./Nav.astro";
+import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+import ThemeSwitcher from './ThemeSwitcher.astro'
+import OrderButton from '../buttons/OrderButton.astro'
+import Logo from '../Logo.astro'
+import MenuButton from '../buttons/MenuButton.astro'
 
 const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
-<div class="navbar bg-base-200 rounded-box px-5">
+<div class="navbar bg-base-200 rounded-box px-5 sticky">
     <div class="navbar-start">
-
-
-      <div class="dropdown relative">
-        <!-- кнопка -->
-        <label class="btn btn-circle swap swap-rotate">
-          <input type="checkbox" />
-          <svg class="swap-off fill-current" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512"><path d="M64,384H448V341.33H64Zm0-106.67H448V234.67H64ZM64,128v42.67H448V128Z"/></svg>
-          <svg class="swap-on fill-current" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512"><polygon points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"/></svg>
-        </label>
-        
-        <!-- меню -->
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-200 rounded-box w-52 absolute">
-          <Nav />
-        </ul>
-      </div>
-
-      
+      <!-- кнопка меню -->
+      <MenuButton />
     </div>
-
     <!-- логотип -->
-    <div class="navbar-center">
-      <a href={`/${lang}/`} class="btn btn-ghost w-32"><Image id="logo" src={logo} alt="Замовити розробку сайту в Україні" format="avif" /></a>
-    </div>
-
-
+    <Logo />
     <div class="navbar-end flex space-x-6">
-
     <div class="flex space-x-2">
       <!-- переключатель тем -->
-        <div class="inline-flex self-center align-middle">
-          <label class="swap swap-rotate switch-theme">
-            <input type="checkbox" />
-            <svg class="swap-on fill-current w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z"/></svg>
-            <svg class="swap-off fill-current w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"/></svg>
-          </label>
-        </div>
-
+      <ThemeSwitcher />
       <!-- переключатель языка -->
       <SwitchLang />
-  </div>
-
-            <!-- заказать -->
-      <button class="btn btn-primary btn-sm">
-        Замовити
-        <svg class="inline-flex ml-2 align-middle" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 256 256">
-          <path fill="currentColor" d="M240 94c0 70-103.79 126.66-108.21 129a8 8 0 0 1-7.58 0C119.79 220.66 16 164 16 94a62.07 62.07 0 0 1 62-62c20.65 0 38.73 8.88 50 23.89C139.27 40.88 157.35 32 178 32a62.07 62.07 0 0 1 62 62" />
-        </svg>
-      </button>
-
+    </div>
+      <!-- заказать -->
+      <OrderButton />
     </div>
   </div>
 
-
-
-  <script type="text/javascript" transition:persist>
-      document.addEventListener('astro:page-load', () => {
-      // Переключатель тем
-      const themeSwitcher = document.querySelector('.switch-theme input[type="checkbox"]');
-      const logoImage = document.getElementById('logo');
-
-      // Установка темы по умолчанию
-      let defaultTheme = 'dracula';
-      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) {
-        defaultTheme = 'garden';
-      }
-
-      // Проверка cookies
-      const savedTheme = document.cookie.replace(/(?:(?:^|.*;\s*)theme\s*\=\s*([^;]*).*$)|^.*$/, "$1");
-      if (savedTheme) {
-        defaultTheme = savedTheme;
-      }
-
-      document.documentElement.setAttribute('data-theme', defaultTheme);
-      themeSwitcher.checked = defaultTheme === 'garden';
-
-      // Установка логотипа в зависимости от темы
-      logoImage.src = defaultTheme === 'garden' ? '/src/images/logo-dark.png' : '/src/images/logo.png';
-
-      themeSwitcher.addEventListener('change', function (event) {
-        let theme;
-        if (event.target.checked) {
-          // Если переключатель включен, устанавливаем светлую тему
-          theme = 'garden';
-          logoImage.src = '/src/images/logo-dark.png';
-        } else {
-          // Если переключатель выключен, устанавливаем темную тему
-          theme = 'dracula';
-          logoImage.src = '/src/images/logo.png';
-        }
-        document.documentElement.setAttribute('data-theme', theme);
-        document.cookie = `theme=${theme}; expires=Fri, 31 Dec 9999 23:59:59 GMT`;
-      });
-  });
-  </script>
-  
-  
-  
-  
-  <script type="text/javascript" transition:persist>
+<!-- скрипты -->
+  <!-- <script type="text/javascript" transition:persist>
   // кнопка меню
     document.addEventListener('astro:page-load', () => {
       const button = document.querySelector('.swap input[type="checkbox"]');
@@ -138,4 +60,4 @@ const lang = getLangFromUrl(Astro.url);
         }
       })
     });
-  </script>
+  </script> -->
