--- a/src/components/head/Nav.astro
+++ b/src/components/head/Nav.astro
@@ -4,7 +4,18 @@ import { getLangFromUrl, useTranslations } from '../../i18n/utils';
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
+<div class="flex justify-end my-5 p-3 z-[41]">
+    <label for="my-drawer">
+        <svg role="button" class="w-8 h-8" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1S1 5.925 1 12s4.925 11 11 11M8.818 7.403L12 10.586l3.182-3.182l1.414 1.414L13.414 12l3.182 3.182l-1.415 1.414L12 13.414l-3.182 3.182l-1.415-1.414L10.586 12L7.403 8.818z" />
+          </svg> 
+    </label>
+</div>
 
-<li><a href={`/${lang}/`}>{t('nav.home')}</a></li>
-<li><a href={`/${lang}/portfolio`}>{t('nav.portfolio')}</a></li>
-<li><a href={`/${lang}/about`}>{t('nav.about')}</a></li>
+<div class=" border-b-[1px] border-neutral/20 w-full max-w-[300px] px-3 my-5 mx-auto"></div>
+
+<ul class="menu p-4 w-80 bg-base-200 text-base-content min-h-screen">
+    <li><a href={`/${lang}/`}>{t('nav.home')}</a></li>
+    <li><a href={`/${lang}/portfolio`}>{t('nav.portfolio')}</a></li>
+    <li><a href={`/${lang}/about`}>{t('nav.about')}</a></li>
+  </ul>
