--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -2,9 +2,42 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-    font-family: "Overpass", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+html,
+body {
+  font-family: "Overpass", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+  
+.glow-gradient-text {
+    animation: glow 5s linear infinite;
+    background-size: 200%;
+}
+@-webkit-keyframes glow {
+    0% {
+        background-position: 0% 43%;
+    }
+    50% {
+        background-position: 100% 58%;
+    }
+    100% {
+        background-position: 0% 43%;
+    }
+}
+@keyframes glow {
+    0% {
+        background-position: 0% 43%;
+    }
+    50% {
+        background-position: 100% 58%;
+    }
+    100% {
+        background-position: 0% 43%;
+    }
 }
