menu in development

--- a/src/components/head/Nav.astro
+++ b/src/components/head/Nav.astro
@@ -1,5 +1,6 @@
 ---
 import { getLangFromUrl, useTranslations } from '../../i18n/utils';
+import Socials from '../Socials.astro'
 
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
@@ -12,10 +13,14 @@ const t = useTranslations(lang);
     </label>
 </div>
 
-<div class=" border-b-[1px] border-neutral/20 w-full max-w-[300px] px-3 my-5 mx-auto"></div>
 
-<ul class="menu p-4 w-80 bg-base-200 text-base-content min-h-screen">
-    <li><a href={`/${lang}/`}>{t('nav.home')}</a></li>
-    <li><a href={`/${lang}/portfolio`}>{t('nav.portfolio')}</a></li>
-    <li><a href={`/${lang}/about`}>{t('nav.about')}</a></li>
-  </ul>
+<div class="divider divider-secondary">Меню</div>
+<div class="bg-base-200 h-full grid place-self-start rounded-box">
+    <ul class="menu p-4 w-80 text-base-content">
+        <li><a href={`/${lang}/`}>{t('nav.home')}</a></li>
+        <li><a href={`/${lang}/portfolio`}>{t('nav.portfolio')}</a></li>
+        <li><a href={`/${lang}/about`}>{t('nav.about')}</a></li>
+    </ul>
+
+<Socials />
+</div>
