--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -2,6 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+/** SCROLLBAR */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 3px;
+  }
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0);
+  }
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgb(43, 43, 43, 0.7);
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #FF79C6;
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background: #FF79C6;
+  }
+  /** -------------- */
+
 html,
 body {
   font-family: "Overpass", sans-serif;
@@ -13,12 +34,12 @@ body {
 a {
   text-decoration: none !important;
 }
-
   
 .glow-gradient-text {
     animation: glow 5s linear infinite;
     background-size: 200%;
 }
+
 @-webkit-keyframes glow {
     0% {
         background-position: 0% 43%;
