--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ import author from '../images/oleksii-vratskyi.jpg'
       <div>
 
         <div class="grid gap-y-5 lg:gap-y-0">
-          <h1 class="text-8xl font-black"><span class="bg-clip-text text-transparent bg-gradient-to-r from-primary via-accent to-secondary glow-gradient-text">Oleksii Vratskyi</span></h1>
+          <h1 class="text-8xl font-black"><span class="bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text text-gradient-shadow">Oleksii Vratskyi</span></h1>
           <h2 class="text-6xl font-base">
           Front-end розробник<br />
           UI/UX Дизайнер
@@ -23,7 +23,7 @@ import author from '../images/oleksii-vratskyi.jpg'
             Мене звуть Олексій Врацький, я фрілансер з України. 
             Я займаюся розробкою сайтів у різних галузях 
             уже кілька років. За цей час я працював з інтернет-магазинами, 
-            цільовими сторінками, блогами і багатьом іншим. 
+            цільовими сторінками, блогами і іншим. 
           </p>
           <p class="prose lg:prose-lg break-words text-balance">
             Я буду радий співпрацювати з вами у створенні чудового продукту, 
