--- a/src/components/buttons/MenuButton.astro
+++ b/src/components/buttons/MenuButton.astro
@@ -13,7 +13,7 @@ import Nav from "../head/Nav.astro";
     </div> 
     <div class="drawer-side z-40">
       <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-      <div class="relative bg-base-200">
+      <div class="relative bg-base-300 rounded-box h-screen">
         <Nav />
       </div>
     </div>
