better hero section, added about section.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,10 +4,10 @@ import Stats from './AuthorStats.astro'
 import author from '../images/oleksii-vratskyi.jpg'
 ---
 
-<section class="grid">
+<section class="mt-[100px] rounded-box bg-base-300 p-5 lg:p-10 grid">
 
 
-  <div class="grid mt-[100px] not-prose p-3 lg:p-0">
+  <div class="grid not-prose p-3 lg:p-0">
     <div class="grid lg:grid-flow-col gap-y-20 lg:gap-y-0 place-content-between place-items-center">
       <div>
 
@@ -34,7 +34,7 @@ import author from '../images/oleksii-vratskyi.jpg'
       </div>
 
       <div class="place-self-center rounded-full order-first lg:order-last">
-        <Image src={author} alt="morph" format='avif' class="ring-2 ring-secondary rounded-full size-[300px] shadow-xl shadow-secondary/20">
+        <Image src={author} alt="morph" format='avif' class="ring-2 ring-secondary rounded-full size-[300px] shadow-xl shadow-secondary/10">
       </div>
 
     </div>
