--- a/src/components/head/Nav.astro
+++ b/src/components/head/Nav.astro
@@ -14,7 +14,7 @@ const t = useTranslations(lang);
 </div>
 
 
-<div class="divider divider-secondary">Меню</div>
+<div class="divider divider-base-content">Меню</div>
 <div class="bg-base-200 h-full grid place-self-start rounded-box">
     <ul class="menu p-4 w-80 text-base-content">
         <li><a href={`/${lang}/`}>{t('nav.home')}</a></li>
