--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from '../components/Hero.astro'
 import { getAbsoluteLocaleUrl } from 'astro:i18n';
+import About from '../components/About.astro'
+
 
 getAbsoluteLocaleUrl("ua");
 ---
@@ -9,5 +11,6 @@ getAbsoluteLocaleUrl("ua");
 <Layout title='VRATSKYI'>
 
     <Hero />
+    <About />
 
 </Layout>
