Updated hero section, updated about section, etc.

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,15 @@
-<div class="bg-base-100 mt-[200px] p-5 lg:p-10 rounded-box">
-    <div class="grid place-content-between">
+<div id="timeline" class="bg-base-100 mt-[200px] p-5 lg:p-10 rounded-box">
+    <div class="grid gap-y-20">
 
-        <div><h2 class="text-6xl font-black bg-clip-text text-transparent bg-gradient-to-r from-accent to-primary">Трошки про мене</h2></div>
+        <div class="grid gap-y-5 not-prose">
+          <div class="grid grid-flow-col place-content-start gap-x-3 place-items-center">
+            <a href="#timeline">
+              <svg  class="inline-block w-6 h-6 stroke-current hover:text-primary duration-150" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="currentColor" d="M20 10V8h-4V4h-2v4h-4V4H8v4H4v2h4v4H4v2h4v4h2v-4h4v4h2v-4h4v-2h-4v-4zm-6 4h-4v-4h4z" /></svg>
+            </a>
+            <h3 class="badge badge-neutral text-lg font-thin">ну зовсім</h3>
+          </div>
+          <h2 class="text-6xl font-black bg-clip-text text-transparent bg-gradient-to-r from-accent to-primary">Трошки про мене</h2>
+        </div>
     
         <div class="grid place-content-center">
             <ul class="timeline timeline-snap-icon max-md:timeline-compact timeline-vertical">
@@ -12,7 +20,7 @@
                   <div class="timeline-start md:text-end mb-10">
                     <time class="font-mono italic">2010</time>
                     <div class="text-lg font-black">Дослідження технологій у дитинстві</div>
-                    Помітив, що батько багато часу проводить за комп'ютером, отримав свій перший комп'ютер із процесором Intel Core 2 Duo і відеокартою GeForce 7800 GTX.
+                    Помітив, що батько багато часу проводить за комп'ютером, випросив для себе, отримав свій перший комп'ютер із процесором Intel Core 2 Duo і відеокартою GeForce 7800 GTX.
                   </div>
                   <hr class="bg-primary" />
                 </li>
@@ -24,7 +32,7 @@
                   <div class="timeline-end mb-10">
                     <time class="font-mono italic">2016</time>
                     <div class="text-lg font-black">Навчання у ВНЗ</div>
-                    Навчання на факультеті "Комп'ютерні системи та комплекти", вивчення мов програмування, веб-розробки та Linux. Навчився писати програми на Pascal і Delphi, викладав вихідний код програм на своєму блозі на платформі WordPress. 
+                    Навчання на факультеті "Комп'ютерні системи та комплекти", вивчення мов програмування, веб-розробки та Linux. Навчився писати програми на Pascal і Delphi, викладав вихідний код програм у своєму блозі на платформі WordPress, доречі який жив і досі, <a class="link link-primary" href="https://freeexpa.wordpress.com/" target="_blank">переглянути.</a>
                   </div>
                   <hr class="bg-primary"  />
                 </li>
@@ -85,7 +93,7 @@
                     <div class="timeline-start md:text-end mb-10">
                       <time class="font-mono italic">2024</time>
                       <div class="text-lg font-black">Наші Дні</div>
-                      Наразі вивчаю Astro Framework, сайт написаний на цій технології. Активно практикуюся писати на JavaScript, вивчаю Vue. Пройдено довгий шлях, визначився з тим, що мені дійсно подобається. Так, цу був довгий шлях, але в майбутньому буде ще цікавіше.
+                      Наразі вивчаю Astro Framework, сайт написаний на цій технології. Активно практикуюся писати на JavaScript, вивчаю Vue. Пройдено довгий шлях, визначився з тим, що мені дійсно подобається. Зараз підтримую розробляю та оновлюю сайт кліента, та розробляю власні проекти. Так, це був довгий шлях, але в майбутньому буде ще цікавіше.
                     </div>
                     <hr class="bg-primary"  />
                 </li>
@@ -97,7 +105,7 @@
                     <div class="timeline-end mb-10">
                       <time class="font-mono italic">2025 +</time>
                       <div class="text-lg font-black">Плани на майбутне</div>
-                      Перейти на full-stack розробника (MEVN - стак), глибше вивчати базы данних (Redis, MongoDB), Вміти вмевнено володіти RestAPI. Запустити свій онлайн проект, який буде вирішувати якусь проблему. 
+                      Перейти на full-stack розробника (MEVN - стак), глибше вивчати базы данних (Redis, MongoDB), Впевнено володіти RestAPI. Запустити свій онлайн проект. 
                     </div>
                     <hr />
                   </li>
