--- a/src/components/AuthorStats.astro
+++ b/src/components/AuthorStats.astro
@@ -1,4 +1,4 @@
-<div class="not-prose mt-20 grid grid-flow-col place-self-start shadow-lg shadow-secondary/10 rounded-box">
+<div class="not-prose mt-20 grid grid-flow-col place-self-start rounded-box">
     <div class="stats shadow bg-base-100">
   
         <div class="stat">
