--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,7 +4,7 @@ import Stats from './AuthorStats.astro'
 import author from '../images/oleksii-vratskyi.jpg'
 ---
 
-<section class="mt-[100px] rounded-box bg-base-300 p-5 lg:p-10 grid">
+<section class="mt-[100px] rounded-box bg-base-200 p-5 lg:p-10 grid">
 
 
   <div class="grid not-prose p-3 lg:p-0">
@@ -12,29 +12,31 @@ import author from '../images/oleksii-vratskyi.jpg'
       <div>
 
         <div class="grid gap-y-5 lg:gap-y-0">
-          <h1 class="text-8xl font-black"><span class="bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text text-gradient-shadow">Oleksii Vratskyi</span></h1>
-          <h2 class="text-6xl font-base">
+          <h1 class="text-7xl font-black"><span class="bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text text-gradient-shadow">Олексій Врацький</span></h1>
+          <h2 class="text-5xl font-black">
           Front-end розробник<br />
-          UI/UX Дизайнер
+         <span class="font-thin text-base-content/20"> UI/UX Дизайнер</span>
         </h2>
       </div>
       <div class="mt-10 grid gap-y-5">
           <p class="prose lg:prose-lg break-words text-balance">
             Мене звуть Олексій Врацький, я фрілансер з України. 
-            Я займаюся розробкою сайтів у різних галузях 
-            уже кілька років. За цей час я працював з інтернет-магазинами, 
-            цільовими сторінками, блогами і іншим. 
+            Займаюся розробкою сайтів у різних галузях 
+            вже 5 років. За цей час працював з інтернет-магазинами, 
+            леднінгами, блогами та іншим. 
           </p>
           <p class="prose lg:prose-lg break-words text-balance">
-            Я буду радий співпрацювати з вами у створенні чудового продукту, 
+            Буду радий співпрацювати з вами у створенні чудового продукту, 
             який допоможе вам залучити більше клієнтів і поліпшити присутність 
             вашої компанії в Інтернеті.
           </p>
         </div>
       </div>
 
-      <div class="place-self-center rounded-full order-first lg:order-last">
-        <Image src={author} alt="morph" format='avif' class="ring-2 ring-secondary rounded-full size-[300px] shadow-xl shadow-secondary/10">
+      <div class="avatar order-first lg:order-last">
+        <div class="rounded-full ring ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[250px]">
+         <Image src={author} alt="Oleksii Vratskyi" format='avif'>
+        </div>
       </div>
 
     </div>
