--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { getAbsoluteLocaleUrl } from 'astro:i18n';
 import About from '../components/About.astro'
 
 
-getAbsoluteLocaleUrl("ua");
+getAbsoluteLocaleUrl("ru");
 ---
 
 <Layout title='VRATSKYI'>
