--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,6 +2,10 @@
 import { Image } from 'astro:assets'
 import Stats from './AuthorStats.astro'
 import author from '../images/oleksii-vratskyi.jpg'
+import { getLangFromUrl, useTranslations } from '../i18n/utils';
+
+const lang = getLangFromUrl(Astro.url);
+const t = useTranslations(lang);
 ---
 
 <section class="mt-[100px] rounded-box bg-base-200 p-5 lg:p-10 grid">
@@ -12,30 +16,31 @@ import author from '../images/oleksii-vratskyi.jpg'
       <div>
 
         <div class="grid gap-y-5 lg:gap-y-0">
-          <h1 class="text-7xl font-black"><span class="bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text text-gradient-shadow">Олексій Врацький</span></h1>
+          <h1 class="text-7xl font-black">
+            <span class="bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text text-gradient-shadow">
+              {t('hero.title')}
+            </span>
+          </h1>
           <h2 class="text-5xl font-black">
-          Front-end розробник<br />
-         <span class="font-thin text-base-content/20"> UI/UX Дизайнер</span>
+            {t('hero.subTitle')}<br />
+         <span class="font-thin text-base-content/20"> 
+          {t('hero.subTitleExtra')}
+        </span>
         </h2>
       </div>
       <div class="mt-10 grid gap-y-5">
           <p class="prose lg:prose-lg break-words text-balance">
-            Мене звуть Олексій Врацький, я фрілансер з України. 
-            Займаюся розробкою сайтів у різних галузях 
-            вже 5 років. За цей час працював з інтернет-магазинами, 
-            леднінгами, блогами та іншим. 
+            {t('hero.description')}
           </p>
           <p class="prose lg:prose-lg break-words text-balance">
-            Буду радий співпрацювати з вами у створенні чудового продукту, 
-            який допоможе вам залучити більше клієнтів і поліпшити присутність 
-            вашої компанії в Інтернеті.
+            {t('hero.subDescription')}
           </p>
         </div>
       </div>
 
-      <div class="avatar order-first lg:order-last">
-        <div class="rounded-full ring ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[250px]">
-         <Image src={author} alt="Oleksii Vratskyi" format='avif'>
+      <div class="avatar order-first lg:order-last !z-0 relative">
+        <div class="rounded-full ring ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[250px] !z-0">
+         <Image src={author} alt="Oleksii Vratskyi" format='avif' class='!z-0'>
         </div>
       </div>
 
