--- a/src/components/buttons/MenuButton.astro
+++ b/src/components/buttons/MenuButton.astro
@@ -2,7 +2,7 @@
 import Nav from "../head/Nav.astro";
 ---
 
-<div class="drawer">
+<div class="drawer !z-[100]">
     <input id="my-drawer" type="checkbox" class="drawer-toggle" />
     <div class="drawer-content">
       <label for="my-drawer" class="btn btn-circle swap swap-rotate">
@@ -11,9 +11,9 @@ import Nav from "../head/Nav.astro";
         <svg class="swap-on fill-current" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 512 512"><polygon points="400 145.49 366.51 112 256 222.51 145.49 112 112 145.49 222.51 256 112 366.51 145.49 400 256 289.49 366.51 400 400 366.51 289.49 256 400 145.49"/></svg>
       </label>
     </div> 
-    <div class="drawer-side z-40">
+    <div class="drawer-side !z-[100]">
       <label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-      <div class="relative bg-base-300 rounded-box h-screen">
+      <div class="relative bg-base-300 rounded-box h-screen !z-[100]">
         <Nav />
       </div>
     </div>
