--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -11,7 +11,7 @@ const t = useTranslations(lang);
 ---
 
 <div class="navbar bg-base-200 rounded-box px-5 sticky">
-    <div class="navbar-start">
+    <div class="navbar-start !z-[100]">
       <!-- кнопка меню -->
       <MenuButton />
     </div>
