--- a/src/pages/ua/index.astro
+++ b/src/pages/ua/index.astro
@@ -10,7 +10,7 @@ getAbsoluteLocaleUrl("ua");
 
 <Layout title='VRATSKYI'>
 
-    <Hero />
-    <About />
+    <Hero transition:persist />
+    <About transition:persist />
 
 </Layout>
