--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -1,30 +1,22 @@
 ---
-import SwitchLang from './SwitchLang.astro'
-import { getLangFromUrl, useTranslations } from '../../i18n/utils';
-import ThemeSwitcher from './ThemeSwitcher.astro'
 import OrderButton from '../buttons/OrderButton.astro'
 import Logo from '../Logo.astro'
 import MenuButton from '../buttons/MenuButton.astro'
-
-const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+import ShowWeather from '../ShowWeather.astro'
 ---
 
 <div class="navbar bg-base-200 rounded-box px-5 sticky">
     <div class="navbar-start !z-[100]">
       <!-- кнопка меню -->
-      <MenuButton />
+      <MenuButton transition:persist />
     </div>
     <!-- логотип -->
-    <Logo />
+    <Logo transition:persist />
     <div class="navbar-end flex space-x-6">
     <div class="flex space-x-2">
-      <!-- переключатель тем -->
-      <ThemeSwitcher />
-      <!-- переключатель языка -->
-      <SwitchLang />
     </div>
+      <ShowWeather transition:persist />
       <!-- заказать -->
-      <OrderButton />
+      <OrderButton transition:persist />
     </div>
   </div>
