--- a/src/components/ShowWeather.astro
+++ b/src/components/ShowWeather.astro
@@ -5,7 +5,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="text-sm hidden md:inline-flex pt-1">{t("nav.city")} <span id="weather"></span></div>
+<div class="text-sm hidden md:inline-flex pt-1">{t("nav.city")} 🕐<span id="weather"></span></div>
 
 <script type="text/javascript" transition:persist>
    document.addEventListener("astro:page-load", () => {
@@ -20,8 +20,23 @@ const t = useTranslations(lang);
         const localtime = json.location.localtime;
         const time = localtime.slice(10, 15).replace(/\s/g, "");
 
+        const cold = '❄️'
+        const warm = '🌞'
+        const semiWarm = '⛅'
+
+
+        if (temp <= 0) {
+          tempIcon = cold
+        } else if (temp >= 5) {
+          tempIcon = semiWarm
+        } else {
+          tempIcon = warm
+        }
+
+        console.log(tempIcon)
+
         const weather = document.getElementById("weather");
-        weather.innerHTML = `${time}, погода: ${temp}`;
+        weather.innerHTML = `&nbsp;${time},&nbsp;${tempIcon}&nbsp;${temp}`;
       }
       weather();
   });
