--- a/src/components/AuthorStats.astro
+++ b/src/components/AuthorStats.astro
@@ -5,7 +5,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div class="not-prose mt-20 grid grid-flow-col place-self-start rounded-box">
+<div class="not-prose mt-20 grid grid-flow-col place-self-start rounded-box overflow-x-auto">
     <div class="stats shadow bg-base-100">
   
         <div class="stat">
