--- a/src/components/ShowWeather.astro
+++ b/src/components/ShowWeather.astro
@@ -46,7 +46,7 @@ const t = useTranslations(lang);
       // console.log(`Selected Icon: ${tempIcon}`);
 
       const weather = document.getElementById("weather");
-      weather.innerHTML = `&nbsp;${time},&nbsp;${tempIcon}&nbsp;${roundedTemp}°C`;
+      weather.innerHTML = `&nbsp;${time}&nbsp;${tempIcon}&nbsp;${roundedTemp}°C`;
     }
     weather();
   });
