--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -70,3 +70,9 @@ a {
   background-color: rgba(71, 212, 255, 0);
   box-shadow: inset 0px 0px 200px var(--fallback-s, oklch(var(--s) / 0.1));
 }
+
+.my-link[data-tippy-content] {
+  position: relative;
+  transition: color 0.3s;
+  color: var(--fallback-s, oklch(var(--s) / 1));
+}
