Huge update, added dynamic adaptive script, finished skills section, etc.

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,7 +5,7 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
 
-<div id="timeline" class="bg-base-100 mt-[80px] lg:mt-[300px] p-5 lg:p-10 rounded-box">
+<section id="timeline" class="bg-base-100 mt-[80px] lg:mt-[300px] p-5 lg:p-10 rounded-box">
     <div class="grid gap-y-20">
 
         <div class="grid gap-y-5 not-prose">
@@ -120,6 +120,5 @@ const t = useTranslations(lang);
                   </li>
               </ul>
         </div>
-    
     </div>
-</div>
+</section>
