--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -10,7 +10,7 @@ const t = useTranslations(lang);
 
 <div class="absolute top-0 left-0 right-0 bottom-0 bg-dots z-[-1]"></div>
 
-<section class="mt-[80px] lg:mt-[150px] rounded-box bg-base-200 p-5 lg:p-10 grid">
+<section class="w-full min-w-full max-w-[1024px] mt-[80px] lg:mt-[150px] rounded-box bg-base-200 p-5 lg:p-10 grid">
 
 
   <div class="grid not-prose p-3 lg:p-0">
@@ -38,7 +38,7 @@ const t = useTranslations(lang);
       </div>
 
       <div class="order-first lg:order-last">
-        <Image src={author} alt="Oleksii Vratskyi" format='avif' class='rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[250px] !z-0'>
+        <Image src={author} alt="Oleksii Vratskyi" format='avif' class='rounded-full ring-[6px] ring-primary ring-offset-base-100 ring-offset-2 shadow-xl shadow-secondary/10 size-[200px] !z-0'>
       </div>
 
     </div>
