--- a/src/components/head/Nav.astro
+++ b/src/components/head/Nav.astro
@@ -50,6 +50,7 @@ const t = useTranslations(lang);
             {t('nav.services')}
         </a></li>
     </ul>
-
-<Socials transition:persist />
+<div class="socials grid place-content-center place-items-center gap-y-5">
+    <Socials transition:persist />
+</div>
 </div>
