--- a/src/components/head/Header.astro
+++ b/src/components/head/Header.astro
@@ -5,17 +5,26 @@ import MenuButton from '../buttons/MenuButton.astro'
 import ShowWeather from '../ShowWeather.astro'
 ---
 
-<div class="navbar bg-base-200 rounded-box px-5 sticky">
-    <div class="navbar-start !z-[100]">
+<div class="navbar bg-base-200 rounded-box px-5 fixed top-0 left-0 right-0 w-full max-w-[1024px] mx-auto z-50">
+    <div class="navbar-start">
       <!-- кнопка меню -->
-      <MenuButton transition:persist />
+      <div class="grid grid-flow-col gap-x-5">
+        <MenuButton transition:persist />
+        <div class="not-prose place-self-center text-xs md:text-sm badge badge-primary badge-outline pt-3 pb-2 ">
+          <h2 class="bg-clip-text text-transparent bg-gradient-to-r from-primary via-secondary to-accent glow-gradient-text text-gradient-shadow">
+            свободен
+          </h2>
+        </div>
+      </div>
     </div>
     <!-- логотип -->
     <Logo transition:persist />
     <div class="navbar-end flex space-x-6">
     <div class="flex space-x-2">
     </div>
+    <div data-da=".socials,648,first" transition:persist>
       <ShowWeather transition:persist />
+    </div>
       <!-- заказать -->
       <OrderButton transition:persist />
     </div>
