--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,7 @@ const t = useTranslations(lang);
 
         <div class="grid gap-y-5 lg:gap-y-0">
           <h1 class="text-7xl font-black">
-            <span class="bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text text-gradient-shadow">
+            <span class="text-gradient-shadow bg-clip-text text-transparent bg-gradient-to-r from-accent via-primary to-secondary glow-gradient-text">
               {t('hero.title')}
             </span>
           </h1>
