--- a/src/components/ShowWeather.astro
+++ b/src/components/ShowWeather.astro
@@ -14,75 +14,84 @@ const t = useTranslations(lang);
     const api =
       "http://api.weatherapi.com/v1/current.json?key=f93e372191eb42b981702543240903&q=Kyiv&aqi=no";
 
-    async function weather() {
-      const response = await fetch(api);
-      let json = await response.json();
+    const weatherIcons = {
+      1000: "☀️", // SunnyThe
+      1003: "⛅", // Partly cloudy
+      1006: "☁️", // Cloudy
+      1009: "☁️", // Overcast
+      1030: "🌫️", // Mist
+      1063: "🌦️", // Patchy rain possible
+      1066: "🌨️", // Patchy snow possible
+      1069: "🌨️", // Patchy sleet possible
+      1072: "🌨️", // Patchy freezing drizzle possible
+      1087: "🌩️", // Thundery outbreaks possible
+      1114: "❄️", // Blowing snow
+      1117: "❄️", // Blizzard
+      1135: "🌫️", // Fog
+      1147: "🌫️", // Freezing fog
+      1150: "🌧️", // Patchy light drizzle
+      1153: "🌧️", // Light drizzle
+      1168: "🌧️", // Freezing drizzle
+      1171: "🌧️", // Heavy freezing drizzle
+      1180: "🌧️", // Patchy light rain
+      1183: "🌧️", // Light rain
+      1186: "🌧️", // Moderate rain at times
+      1189: "🌧️", // Moderate rain
+      1192: "🌧️", // Heavy rain at times
+      1195: "🌧️", // Heavy rain
+      1198: "🌧️", // Light freezing rain
+      1201: "🌧️", // Moderate or heavy freezing rain
+      1204: "🌨️", // Light sleet
+      1207: "🌨️", // Moderate or heavy sleet
+      1210: "🌨️", // Patchy light snow
+      1213: "🌨️", // Light snow
+      1216: "🌨️", // Patchy moderate snow
+      1219: "🌨️", // Moderate snow
+      1222: "🌨️", // Patchy heavy snow
+      1225: "🌨️", // Heavy snow
+      1237: "🌨️", // Ice pellets
+      1240: "🌧️", // Light rain shower
+      1243: "🌧️", // Moderate or heavy rain shower
+      1246: "🌧️", // Torrential rain shower
+      1249: "🌨️", // Light sleet showers
+      1252: "🌨️", // Moderate or heavy sleet showers
+      1255: "🌨️", // Light snow showers
+      1258: "🌨️", // Moderate or heavy snow showers
+      1261: "🌨️", // Light showers of ice pellets
+      1264: "🌨️", // Moderate or heavy showers of ice pellets
+      1273: "🌩️", // Patchy light rain with thunder
+      1276: "🌩️", // Moderate or heavy rain with thunder
+      1279: "🌨️", // Patchy light snow with thunder
+      1282: "🌨️", // Moderate or heavy snow with thunder
+    };
 
-      const temp = json.current.temp_c;
-      const localtime = json.location.localtime;
-      const time = localtime.slice(10, 16).replace(/\s/g, "");
-      const condition = json.current.condition.code;
+    const defaultIcon = "❓"; // Иконка по умолчанию для неизвестных условий
 
-      const weatherIcons = {
-        1000: "☀️", // SunnyThe
-        1003: "⛅", // Partly cloudy
-        1006: "☁️", // Cloudy
-        1009: "☁️", // Overcast
-        1030: "🌫️", // Mist
-        1063: "🌦️", // Patchy rain possible
-        1066: "🌨️", // Patchy snow possible
-        1069: "🌨️", // Patchy sleet possible
-        1072: "🌨️", // Patchy freezing drizzle possible
-        1087: "🌩️", // Thundery outbreaks possible
-        1114: "❄️", // Blowing snow
-        1117: "❄️", // Blizzard
-        1135: "🌫️", // Fog
-        1147: "🌫️", // Freezing fog
-        1150: "🌧️", // Patchy light drizzle
-        1153: "🌧️", // Light drizzle
-        1168: "🌧️", // Freezing drizzle
-        1171: "🌧️", // Heavy freezing drizzle
-        1180: "🌧️", // Patchy light rain
-        1183: "🌧️", // Light rain
-        1186: "🌧️", // Moderate rain at times
-        1189: "🌧️", // Moderate rain
-        1192: "🌧️", // Heavy rain at times
-        1195: "🌧️", // Heavy rain
-        1198: "🌧️", // Light freezing rain
-        1201: "🌧️", // Moderate or heavy freezing rain
-        1204: "🌨️", // Light sleet
-        1207: "🌨️", // Moderate or heavy sleet
-        1210: "🌨️", // Patchy light snow
-        1213: "🌨️", // Light snow
-        1216: "🌨️", // Patchy moderate snow
-        1219: "🌨️", // Moderate snow
-        1222: "🌨️", // Patchy heavy snow
-        1225: "🌨️", // Heavy snow
-        1237: "🌨️", // Ice pellets
-        1240: "🌧️", // Light rain shower
-        1243: "🌧️", // Moderate or heavy rain shower
-        1246: "🌧️", // Torrential rain shower
-        1249: "🌨️", // Light sleet showers
-        1252: "🌨️", // Moderate or heavy sleet showers
-        1255: "🌨️", // Light snow showers
-        1258: "🌨️", // Moderate or heavy snow showers
-        1261: "🌨️", // Light showers of ice pellets
-        1264: "🌨️", // Moderate or heavy showers of ice pellets
-        1273: "🌩️", // Patchy light rain with thunder
-        1276: "🌩️", // Moderate or heavy rain with thunder
-        1279: "🌨️", // Patchy light snow with thunder
-        1282: "🌨️", // Moderate or heavy snow with thunder
-      };
+    async function fetchData() {
+      try {
+        const response = await fetch(api);
+        const json = await response.json();
 
-      const defaultIcon = "❓"; // Иконка по умолчанию для неизвестных условий
+        const temp = json.current.temp_c;
+        const localtime = json.location.localtime;
+        const time = localtime.slice(10, 16).replace(/\s/g, "");
+        const condition = json.current.condition.code;
 
-      const conditionIcon = weatherIcons[Number(condition)] || defaultIcon;
+        const conditionIcon = weatherIcons[Number(condition)] || defaultIcon;
 
-      const roundedTemp = Math.round(Number(temp));
+        const roundedTemp = Math.round(Number(temp));
 
-      const weather = document.getElementById("weather");
-      weather.innerHTML = `&nbsp;${time}&nbsp;${conditionIcon}&nbsp;${roundedTemp}°C`;
+        const weatherElement = document.getElementById("weather");
+        weatherElement.innerHTML = `&nbsp;${time}&nbsp;${conditionIcon}&nbsp;${roundedTemp}°C`;
+
+        // Устанавливаем таймаут в 10 минут перед следующим запросом
+        setTimeout(fetchData, 10 * 60 * 1000);
+      } catch (error) {
+        console.error("Ошибка при получении данных с API:", error);
+      }
     }
-    weather();
+
+    // Вызываем функцию fetchData при первой загрузке страницы
+    fetchData();
   });
 </script>
