--- a/src/components/head/Nav.astro
+++ b/src/components/head/Nav.astro
@@ -22,7 +22,7 @@ const t = useTranslations(lang);
 </div>
 
 
-<div class="divider divider-base-content">Меню</div>
+<div class="divider divider-base-content"><span class="text-primary">Меню</span></div>
 <div class="bg-base-200 h-full grid place-self-start rounded-box !z-[100]">
     <ul class="menu p-4 w-80 text-base-content">
         <li><a href={`/${lang}/`} class="grid grid-flow-col place-content-stretch hover:text-primary duration-150">
