--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Hero from '../components/Hero.astro'
 import { getAbsoluteLocaleUrl } from 'astro:i18n';
 import About from '../components/About.astro'
 import Skills from '../components/Skills.astro'
-
+import MyGithub from '../components/MyGithub.astro'
 
 getAbsoluteLocaleUrl("ru");
 ---
@@ -15,4 +15,6 @@ getAbsoluteLocaleUrl("ru");
         <About transition:persist />
     </div>
     <Skills transition:persist />
+    <MyGithub transition:persist />
+
 </Layout>
